Fixed layout issue
Added height to body to resolve a display issue

--- a/css/index-stylesheet.css
+++ b/css/index-stylesheet.css
@@ -4,6 +4,7 @@ body
 	font-family: 'Roboto', sans-serif;
 	display: flex;
 	flex-wrap: wrap;
+	height: 100%;
 }
 #leftSection
 {
